fix: Fix accidental breakage of Section.Navbar on firefox

--- a/src/components/ui/Section/Section.module.css
+++ b/src/components/ui/Section/Section.module.css
@@ -66,6 +66,7 @@
     height: 100%;
     overflow: scroll hidden;
     scroll-snap-type: x mandatory;
+    scrollbar-width: none;
     -ms-overflow-style: none;
 
     &::-webkit-scrollbar {
